# set project name
set( PROJECT_NAME "ESyS-Particle" ) 
project(${PROJECT_NAME})

# set version
# version number
set(${PROJECT_NAME}_VERSION_MAJOR 2)
set(${PROJECT_NAME}_VERSION_MINOR 3)
set(${PROJECT_NAME}_VERSION_PATCH 5)

message (${PROJECT_NAME} ${${PROJECT_NAME}_VERSION_PATCH})

# install target 
OPTION(CMAKE_INSTALL_PREFIX /usr/local/esys-particle/)

CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
#SET(CMAKE_VERBOSE_MAKEFILE TRUE)

SET(CMAKE_C_COMPILER mpicc)
SET(CMAKE_CXX_COMPILER mpicxx)
message(${CMAKE_C_COMPILER})

FIND_PACKAGE(Boost COMPONENTS system filesystem python38 thread REQUIRED)
if(${Boost_FOUND})
        message(${Boost_LIBRARIES})
endif(${Boost_FOUND})

#set(Python_ADDITIONAL_VERSIONS 3.8.5)
FIND_PACKAGE(PythonLibs 3.8 EXACT REQUIRED)
if(${PYTHONLIBS_FOUND})
	message(${PYTHONLIBS_VERSION_STRING} " " ${PYTHONLIBS_LIBRARY})
	include_directories(${PYTHON_INCLUDE_DIRS})
endif(${PYTHONLIBS_FOUND})

#add_custom_target( bzr_rev ALL ${CMAKE_SOURCE_DIR}/mk_rev_h.sh  ${CMAKE_SOURCE_DIR} )

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Foundation)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Parallel)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})


ADD_DEFINITIONS(-DPACKAGE_NAME="esys")
ADD_DEFINITIONS(-DPACKAGE_VERSION="2.3")

#===========================================================
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Foundation")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Fields")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Geometry")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Model")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/pis")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Tools")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/ntable")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/tml")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/ppa")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Python")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Parallel")
#===========================================================
